update all before vacation